fixed Resize Image, Hide ProgressBar when finished loading data.

--- a/app/src/main/res/layout-v21/activity_show_detail.xml
+++ b/app/src/main/res/layout-v21/activity_show_detail.xml
@@ -11,13 +11,13 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#FFCA28"
-        android:paddingBottom="20dp"
-        android:paddingTop="20dp"
+        android:background="#FFF176"
+        android:paddingBottom="32dp"
+        android:paddingTop="32dp"
         android:paddingLeft="16dp"
         android:textSize="36dp"
         android:id="@+id/movieName"
-        android:layout_below="@+id/toolBar"
+
         />
 
     <LinearLayout
@@ -62,7 +62,7 @@
                 android:layout_height="wrap_content"
                 android:id="@+id/markAsFavoriteButton"
                 android:gravity="center"
-                android:background="#FFD54F"
+                android:background="#FFF9C4"
                 android:textSize="10dp"
                 android:text="mark as favorite"
                 android:paddingLeft="16dp"
