--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,9 +3,13 @@
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
-        <item name="colorPrimary">#FFEB3B</item>
-        <item name="colorPrimaryDark">#FBC02D</item>
+        <item name="colorPrimary">#FFF9C4</item>
+        <item name="colorPrimaryDark">#FFF176</item>
         <item name="colorAccent">@color/colorAccent</item>
+
+    </style>
+    <style name="TextAppearance.AppCompat.Widget.ActionBar.Title." parent="TextAppearance.AppCompat.Widget.ActionBar.Title">
+        <item name="android:textColorPrimaryInverse">#212121</item>
     </style>
 
 </resources>
