--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,13 +3,17 @@
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
-        <item name="colorPrimary">#FFF9C4</item>
-        <item name="colorPrimaryDark">#FFF176</item>
+        <item name="colorPrimary">#212121</item>
+        <item name="colorPrimaryDark">#757575</item>
         <item name="colorAccent">@color/colorAccent</item>
 
     </style>
-    <style name="TextAppearance.AppCompat.Widget.ActionBar.Title." parent="TextAppearance.AppCompat.Widget.ActionBar.Title">
-        <item name="android:textColorPrimaryInverse">#212121</item>
+    <style name="ActionButton" parent="Theme.AppCompat.Light.DarkActionBar">
+        <item name="android:paddingStart">0dp</item>
+        <item name="android:paddingEnd">0dp</item>
+        <item name="android:paddingLeft">0dp</item>
+        <item name="android:paddingRight">0dp</item>
+        <item name="android:minWidth">0dp</item>
     </style>
-
+    
 </resources>
